--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -6,8 +6,10 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
+    <OutputType>Library</OutputType>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyName>Haggling.Project</AssemblyName>
   </PropertyGroup>
 
 </Project>
